Prevent wrapping nicks in logs

--- a/src/Korobi/WebBundle/Resources/assets/sass/application/irc/_logs.scss
+++ b/src/Korobi/WebBundle/Resources/assets/sass/application/irc/_logs.scss
@@ -47,6 +47,7 @@
       text-overflow: ellipsis;
       text-overflow: '+'; // Use custom elision if supported
       overflow: hidden;
+      white-space: nowrap;
     }
 
     .message {
